--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,9 @@ spring:
       settings:
         trace: true
         web-allow-others: true
+  messages:
+    basename: i18n/messages
+    encoding: UTF-8
   main:
     allow-bean-definition-overriding: true
 
