--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,8 @@ spring:
     console:
       settings:
         web-allow-others: true
+  messages:
+    basename: i18n/messages
+    encoding: UTF-8
   main:
     allow-bean-definition-overriding: true
